# smollm2ko

./: .gitignore  AGENTS.md  MEMO.md  README.md  candidates.toon  pyproject.toml
customdatasets/: README.md  customdatasets.py
datasets/: README.md
datasets/ko_unified_sft/: README.md  ko_unified_sft.py
experiments/: extract_dataset_vocab.py  test.py  unified_dataset_samples.py  vocabulary_adaptation.py
scripts/: download_dataset.py  extract_evicted_tokens.py  extract_replacement_candidates.py  inspect_hf_datasets.py  inspect_raw_datasets.py
tests/: test_download_dataset.py
