[project]
name = "smollm2ko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=4.5.0",
    "pyright>=1.1.408",
    "pytest>=8.4.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
]

[project.scripts]
smollm2ko = "smollm2ko.cli:main"
smollm2ko-download = "scripts.download_dataset:main"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["src"]
